--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,19 @@
     padding: 0;
 
 }
+
+body {
+    position: relative;
+}
+
+.box {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    display: inline-block;
+    border: 3px solid rgb(0, 0, 0);
+    font-size: 2rem;
+    padding: 1rem;
+    background-color: rgb(110, 0, 0);
+    color: white;
+}
