--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,9 +11,13 @@ body {
 
 .box {
     position: absolute;
-    top: 20px;
-    left: 20px;
-    display: inline-block;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+
+    width: 4rem;
+    height: 4rem;
+
     border: 3px solid rgb(0, 0, 0);
     font-size: 2rem;
     padding: 1rem;
