Add function to PLAY AGAIN button

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -40,6 +40,10 @@ body {
 
 }
 
+.hidden {
+    display: none;
+}
+
 .game-over-screen .content-wrapper {
     display: flex;
     flex-flow: row wrap;
