--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,11 +16,117 @@ body {
     display:flex;
 
     justify-content:center;
-    
     align-items:center;
 
     overflow: hidden;
 
+    background-color: #87ceeb;
+
+
+
+}
+
+.ground {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    
+    
+}
+
+.cloud {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 300px;
+
+    
+}
+
+.ground .img-div {
+    border: 5px solid yellowgreen;
+    
+}
+
+.start-screen {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    z-index: 10000;
+}
+
+.start-screen .content-wrapper {
+    width: 80%;
+    text-align: center;
+
+    border: 4px solid rgb(83, 6, 6);
+    border-radius: 20px;
+    padding: 2rem;
+
+    background-color: rgba(179, 179, 179, .9);
+
+    box-shadow: 0 0 10px black;
+}
+
+
+.start-screen .content-wrapper h1 {
+    font-size: 5rem;
+    font-family: cursive;
+    color:rgb(83, 6, 6);
+
+}
+
+.start-screen .content-wrapper h4 {
+    font-size: 1.4rem;
+
+    color: rgb(5, 121, 82);
+
+    margin-bottom: 1.5rem;
+
+}
+
+
+.start-screen .content-wrapper .intro {
+    font-size: 1.4rem;
+    font-family: monospace;
+}
+
+.start-screen .content-wrapper .intro p {
+    margin-bottom: 1.5rem;
+}
+
+
+.start-screen .content-wrapper .intro p.emphasize {
+    font-weight: bold;
+    color: rgb(173, 36, 36);
+    font-size: 120%;
+}
+
+.start-screen .content-wrapper button.play {
+    font-size: 1.5rem;
+    padding: 1rem;
+
+    border: none;
+    
+    border-radius: 20px;
+    background-color: aquamarine;
+
+}
+
+.start-screen .content-wrapper button.play:hover {
+    background-color: rgb(101, 219, 180);
+}
+
+.start-screen .content-wrapper button.play:active {
+    background-color: rgb(125, 185, 165);
 }
 
 .game-over-screen {
