--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -401,10 +401,13 @@ body {
     margin: 0;
 }
 
+.box-wrapper {
+    position: absolute;
+    
+}
+
 .box {
     position: absolute;
-    top: 200px;
-    left: 200px;
     display: grid;
     align-content: center;
     justify-content: center;
@@ -457,6 +460,44 @@ body {
 
 }
 
+
+@keyframes destroyedAnimation {
+    100% {
+        opacity: 0;
+        transform: scale(1.5) rotateZ(60deg);
+    }
+
+}
+
+@keyframes destroyedAnimationForBefore {
+    100% {
+        opacity: 0;
+        transform: scale(1) translateY(-100%);
+    }
+
+}
+
+@keyframes destroyedAnimationForAfter {
+    100% {
+        opacity: 0;
+        transform: scale(1) translateX(100%);
+    }
+
+}
+
+.to-be-destroyed {
+    animation: destroyedAnimation .3s;
+}
+
+.to-be-destroyed::before {
+    animation: destroyedAnimationForBefore .3s;
+}
+
+.to-be-destroyed::after {
+    animation: destroyedAnimationForAfter .3s;
+}
+
+
 @keyframes touchGroundAnimation {
     50% {
         opacity: 0;
@@ -471,15 +512,6 @@ body {
     animation: touchGroundAnimation .6s;
 }
 
-@keyframes destroyedAnimation {
-    to {
-        opacity: 0;
-        transform: scale(1.2);
-    }
-}
 
-.to-be-destroyed {
-    animation: destroyedAnimation .3s;
-}
 
 
