--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -70,6 +70,8 @@ body {
 
 .start-screen .content-wrapper {
     width: 80%;
+    max-width: 1200px;
+    min-width: 400px;
     text-align: center;
 
     border: 4px solid rgb(83, 6, 6);
@@ -193,6 +195,10 @@ body {
     color:rgb(53, 167, 167);
 }
 
+.game-over-screen .credit-screen .other-credits {
+    margin-bottom: 1rem;
+    font-style: italic;
+}
 
 
 .hidden {
